# valid8-binaries

./: .env.example  .env.template  .env.template.new  .gitignore  .gitlab-ci.yml  .parry.example.yml  .vercelignore  401_FIXES_COMPLETE.md  ADDITIONAL_FEATURES_BRAINSTORM.md  ADOPTION_RATE_ANALYSIS.md  AI_OPTIMIZATION_COMPLETE.md  AI_OPTIMIZATION_PLAN.md  ASSESSMENT_SUMMARY.md  AUTOMATION_GUIDE.md  BENCHMARK_SUMMARY.md  BETA_LAUNCH_CHECKLIST.md  BETA_LAUNCH_SETUP.md  BUILD_DEBUG.md  BUILD_INSTRUCTIONS.md  CHANGES_SUMMARY.md  CHECK_DEPLOYMENT_STATUS.sh  CLEANUP_SUMMARY.md  CODE_PROTECTION_GUIDE.md  CODE_SIGNING_SOLUTIONS.md  COMMIT_MESSAGE.md  COMMIT_MESSAGE.txt  COMPETITOR_PRICING_ANALYSIS.md  COMPREHENSIVE_BENCHMARK_RESULTS.md  COMPREHENSIVE_TESTING_REPORT.md  CONFERENCE_PAPER_OUTLINE.md  CONTRIBUTING.md  CORE_IMPROVEMENTS.md  CORRECTED_PERFORMANCE_CLAIMS.md  CRITICAL_LAUNCH_FIXES.md  CROSS_PLATFORM_README.md  DATA_COLLECTION_PLAN.md  DEPENDENCY_ANALYSIS_ASSESSMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_SECURITY_GUIDE.md  DEPLOYMENT_STRATEGY.md  (+299 more)
TAIGA_VULNERABILITY_REPORTS/: VULN_1__get_tasks_statuses.md
api/: create-checkout-session.py  index.py  requirements.txt
benchmark_output/: parry_deep.json  parry_fast.json  parry_hybrid.json  semgrep.json
benchmark_results/: BENCHMARK_REPORT.md  REAL_BENCHMARK.md  benchmark_data.json  semgrep.json  semgrep_results.json
comparison_output/: parry_deep.json  parry_fast.json  parry_hybrid.json  semgrep_p_owasp-top-ten.json  semgrep_p_python.json  semgrep_p_security-audit.json
comprehensive_test_suite/: create_test_files.py  run_comprehensive_tests.py
cwe287_validation_test/: auth_bypass1.py  auth_bypass2.py  auth_bypass3.py
docs-archive/: ADMIN_FEEDBACK_ACCESS.md  BETA_LICENSE_AND_UPDATES.md  BETA_ONBOARDING_COMPLETE.md  ENFORCEMENT_AND_RENEWAL_SUMMARY.md  FINAL_ANSWERS_SUMMARY.md  HYBRID_SPEED_OPTIMIZATION_PLAN.md  LAUNCH_CHECKLIST_TACTICAL.md  LAUNCH_READINESS_SUMMARY.md  LICENSE_AGREEMENT.md  RELEASE_NOTES_BETA.md  (+5 more)
(+2489 files in other folders)
